manifest/backend/kafka/05_app_kafka_comsumer.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: consumer
---

# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: kafka-consumer-config
#   namespace: consumer
# data:
#   APP_NAME: "eks-benchmark"
#   ENV: "kafka"
#   DEBUG: "true"
#   AWS_REGION: "ca-central-1"
#   POOL_SIZE: "5"
#   MAX_OVERFLOW: "0"
#   KAFKA__USE_MSK_AUTH: "true"
#   KAFKA__GROUP_ID: "telemetry-consumer-group"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer
  namespace: consumer
  labels:
    app.kubernetes.io/name: kafka-consumer
    app.kubernetes.io/part-of: eks-benchmark
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  revisionHistoryLimit: 5
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: kafka-consumer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kafka-consumer
        app.kubernetes.io/part-of: eks-benchmark
        app.kubernetes.io/component: worker
      annotations:
        kubernetes.io/change-cause: "kafka-consumer deploy"
    spec:
      serviceAccountName: msk-kafka-consumer
      terminationGracePeriodSeconds: 90
      containers:
        - name: kafka-consumer
          image: 099139718958.dkr.ecr.ca-central-1.amazonaws.com/auto-benchmark:kafka-consumer
          imagePullPolicy: Always

          # envFrom:
          #   - configMapRef:
          #       name: kafka-consumer-config

          resources:
            requests:
              cpu: "512m"
              memory: "512Mi"
            limits:
              cpu: "512m"
              memory: "512Mi"
