manifest/backend/kafka/05_app_outbox.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: outbox
---
# deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-outbox
  namespace: outbox
  labels:
    app.kubernetes.io/name: redis-outbox
    app.kubernetes.io/part-of: eks-benchmark
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  revisionHistoryLimit: 5
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: redis-outbox
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis-outbox
        app.kubernetes.io/part-of: eks-benchmark
        app.kubernetes.io/component: worker
      annotations:
        kubernetes.io/change-cause: "redis-outbox deploy"
    spec:
      serviceAccountName: msk-redis-outbox
      terminationGracePeriodSeconds: 90
      containers:
        - name: redis-outbox
          image: 099139718958.dkr.ecr.ca-central-1.amazonaws.com/auto-benchmark:redis-outbox
          imagePullPolicy: Always

          resources:
            requests:
              cpu: "512m"
              memory: "512Mi"
            limits:
              cpu: "512m"
              memory: "512Mi"
---
# # hpa
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: redis-outbox-hpa
#   namespace: outbox
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: redis-outbox
#   minReplicas: 1
#   maxReplicas: 4
#   metrics:
#     - type: Resource
#       resource:
#         name: cpu
#         target:
#           type: Utilization
#           averageUtilization: 60
#   behavior:
#     scaleUp:
#       stabilizationWindowSeconds: 0
#       policies:
#         - type: Percent
#           value: 100
#           periodSeconds: 30
#         - type: Pods
#           value: 2
#           periodSeconds: 30
#       selectPolicy: Max
#     scaleDown:
#       stabilizationWindowSeconds: 60
#       policies:
#         - type: Percent
#           value: 25
#           periodSeconds: 60
#       selectPolicy: Max
