manifest/backend/kafka/06_app_outbox.yaml
# app_fastapi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-outbox
  namespace: backend
  labels:
    app.kubernetes.io/name: redis-outbox
    app.kubernetes.io/part-of: eks-benchmark
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  revisionHistoryLimit: 5
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: redis-outbox
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis-outbox
        app.kubernetes.io/part-of: eks-benchmark
        app.kubernetes.io/component: worker
      annotations:
        kubernetes.io/change-cause: "redis-outbox deploy"
    spec:
      serviceAccountName: msk-redis-outbox
      terminationGracePeriodSeconds: 90
      containers:
        - name: redis-outbox
          image: 099139718958.dkr.ecr.ca-central-1.amazonaws.com/auto-benchmark:redis-outbox
          imagePullPolicy: Always

          resources:
            requests:
              cpu: "512m"
              memory: "512Mi"
            limits:
              cpu: "512m"
              memory: "512Mi"
